# supergen

./: Cargo.toml  README.md  cert.pem  key.pem
src/: arguments.rs  client.rs  errors.rs  hashing.rs  inputs.rs  main.rs  queries.rs
