[package]
name = "supergen"
version = "0.1.0"
edition = "2021"
author = "Patrick McHugh <patrick.mchugh4@gmail.com>"
description = "A simple binary for generating a user with an SHA-256 encrypted password, and storing it in a database (with OpenSSL if required)."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3"
openssl = "0.10"
postgres = "0.19"
postgres-openssl = "0.5"
ring = "0.16"
rpassword = "6.0"